--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "watch": "webpack --config webpack.config.js --watch"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.18",
     "@types/node": "^8.9.4",
     "@types/uuid": "^3.4.4",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.1.0",
+    "ts-loader": "^5.3.0",
     "typescript": "^3.4.5",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
-    "ts-loader": "^5.3.0",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
