--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "watch": "webpack --config webpack.config.js --watch"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.18",
     "@types/node": "^8.9.4",
     "@types/uuid": "^3.4.4",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.467.0",
+    "axios": "^0.19.0",
     "uuid": "^3.3.2"
   }
 }
